convert to monai augmentation

--- a/GNN.ipynb
+++ b/GNN.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1167818/445973243.py:24: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+      "/tmp/ipykernel_1217304/2944165975.py:24: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
       "  set_matplotlib_formats('svg', 'pdf') # For export\n",
       "Global seed set to 42\n"
      ]
@@ -108,6 +108,15 @@
     "from monai.config import print_config\n",
     "from monai.losses import DiceLoss\n",
     "\n",
+    "from monai.utils import set_determinism\n",
+    "from monai.transforms import (\n",
+    "    Compose,\n",
+    "    LoadImaged, AddChanneld, Resized, ScaleIntensityd, Flipd, Rotate90d,\n",
+    "    RandAdjustContrastd, RandHistogramShiftd, RandGaussianNoised, RandGaussianSmoothd, RandGaussianSharpend, \n",
+    "    RandAffined, RandRotate90d, RandFlipd, RandZoomd, RandSpatialCropd, RandCropByPosNegLabeld, \n",
+    "    ToTensord\n",
+    ")\n",
+    "\n",
     "# Ensure that all operations are deterministic on GPU (if used) for reproducibility\n",
     "torch.backends.cudnn.determinstic = True\n",
     "torch.backends.cudnn.benchmark = False\n",
@@ -162,6 +171,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Validation sanity check:   0%|          | 0/1 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
+      "Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
+      "Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
+      "Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "                                                                      "
      ]
     },
@@ -176,7 +202,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1:   0%|          | 0/604 [00:10<?, ?it/s, loss=0.572, v_num=8, val_loss=0.615]          "
+      "Epoch 0:   0%|          | 0/604 [00:00<?, ?it/s] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
+      "Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
+      "Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
+      "Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
+      "Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
+      "Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
+      "Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
+      "Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
+      "Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
+      "Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
+      "Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
+      "Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0:   3%|▎         | 20/604 [00:59<29:07,  2.99s/it, loss=0.621, v_num=19] "
      ]
     }
    ],
@@ -322,13 +373,7 @@
     "        # Set master node \n",
     "        self.graph.add_node((-1, -1), weight=np.array([0.0], dtype=np.float32) if weight is None else np.array([weight], dtype=np.float32)) \n",
     "        self.graph.add_node((-2, -2), weight=np.array([1.0], dtype=np.float32) if weight is None else np.array([weight], dtype=np.float32)) \n",
-    "        # for p in [(-1, -1), (-2, -2)]:\n",
-    "        #     self.graph.add_node(p, weight=np.array([0.0], dtype=np.float32) \\\n",
-    "        #         if weight is None else np.array([weight], dtype=np.float32)) \n",
-    "        # for p in [(-3, -3), (-4, -4)]:\n",
-    "        #     self.graph.add_node(p, weight=np.array([1.0], dtype=np.float32) \\\n",
-    "        #         if weight is None else np.array([weight], dtype=np.float32)) \n",
-    "        # self.graph.nodes[(-1, -1)]['weight'] = 0.5 if weight is None else weight\n",
+    "\n",
     "\n",
     "class GraphBasedDataset(Dataset):\n",
     "    def __init__(self, data_dicts, transforms=None):\n",
@@ -336,22 +381,31 @@
     "        self.transforms = transforms\n",
     "        \n",
     "    def __getitem__(self, index):\n",
-    "        image_file = self.data_dicts[index]['image']\n",
-    "        label_file = self.data_dicts[index]['label']\n",
+    "        # image_file = self.data_dicts[index]['image']\n",
+    "        # label_file = self.data_dicts[index]['label']\n",
     "        \n",
-    "        image_array = skimage.io.imread(image_file).astype(np.uint8) \n",
-    "        label_array = skimage.io.imread(label_file).astype(np.uint8) \n",
+    "        # image_array = skimage.io.imread(image_file).astype(np.uint8) \n",
+    "        # label_array = skimage.io.imread(label_file).astype(np.uint8) \n",
     "\n",
+    "        # if self.transforms:\n",
+    "        #     transformed = self.transforms(image=image_array, mask=label_array)\n",
+    "        #     image = transformed['image'].astype(np.float32) / 255.0\n",
+    "        #     label = transformed['mask'].astype(np.float32) / 255.0\n",
+    "        # else:\n",
+    "        #     image = image_array.astype(np.float32) / 255.0\n",
+    "        #     label = label_array.astype(np.float32) / 255.0\n",
+    "        data_dict = self.data_dicts[index]\n",
     "        if self.transforms:\n",
-    "            transformed = self.transforms(image=image_array, mask=label_array)\n",
-    "            image = transformed['image'].astype(np.float32) / 255.0\n",
-    "            label = transformed['mask'].astype(np.float32) / 255.0\n",
+    "            # print(data_dict)\n",
+    "            data_dict = self.transforms(data_dict)\n",
+    "            image = data_dict['image'].squeeze()\n",
+    "            label = data_dict['label'].squeeze()\n",
+    "            # print(image.shape, label.shape)\n",
     "        else:\n",
-    "            image = image_array.astype(np.float32) / 255.0\n",
-    "            label = label_array.astype(np.float32) / 255.0\n",
-    "\n",
-    "        image_grid = ImageGrid(image[::2, ::2], diff_edge=\"diff\")\n",
-    "        label_grid = ImageGrid(label[::2, ::2], diff_edge=\"diff\")\n",
+    "            image, label = data_dict[\"image\"], data_dict[\"label\"]\n",
+    "            \n",
+    "        image_grid = ImageGrid(image, diff_edge=\"diff\")\n",
+    "        label_grid = ImageGrid(label, diff_edge=\"diff\")\n",
     "\n",
     "        image_graph = torch_geometric.utils.from_networkx(image_grid.graph, \n",
     "                                                          group_node_attrs=['weight'],\n",
@@ -400,23 +454,77 @@
     "        return dataloader\n",
     "\n",
     "    def train_dataloader(self):\n",
-    "        train_transforms = AB.Compose([\n",
-    "            AB.OneOf([\n",
-    "                AB.RandomSizedCrop(min_max_height=(160, 240), height=256, width=256, p=0.5),\n",
-    "                AB.PadIfNeeded(min_height=256, min_width=256, p=0.5)\n",
-    "            ], p=1),    \n",
-    "            AB.VerticalFlip(p=0.5),              \n",
-    "            AB.RandomRotate90(p=0.5),\n",
-    "            AB.OneOf([\n",
-    "                AB.ElasticTransform(alpha=120, sigma=120 * 0.05, alpha_affine=120 * 0.03, p=0.5),\n",
-    "                AB.GridDistortion(p=0.5),\n",
-    "                AB.OpticalDistortion(distort_limit=2, shift_limit=0.5, p=1)                  \n",
-    "                ], p=0.8),\n",
-    "            AB.CLAHE(p=0.8),\n",
-    "            AB.RandomBrightnessContrast(p=0.8),    \n",
-    "            AB.RandomGamma(p=0.8), \n",
-    "            AB.Resize(height=256, width=256, p=1),\n",
-    "        ])\n",
+    "        train_transforms = Compose(\n",
+    "            [\n",
+    "                # Basic Augmentationm\n",
+    "                LoadImaged(keys=[\"image\", \"label\"]),\n",
+    "                AddChanneld(keys=[\"image\", \"label\"]),\n",
+    "                Rotate90d(keys=[\"image\", \"label\"]),\n",
+    "                Flipd(keys=[\"image\", \"label\"], spatial_axis=0),\n",
+    "                Resized(\n",
+    "                    keys=[\"image\", \"label\"], \n",
+    "                    spatial_size=(160, 160),\n",
+    "                    mode=[\"bilinear\", \"nearest\"],\n",
+    "                ),\n",
+    "                ScaleIntensityd(\n",
+    "                    keys=[\"image\", \"label\"], \n",
+    "                    minv=0.0, \n",
+    "                    maxv=1.0,\n",
+    "                ),\n",
+    "                # Advanced - Heavy Augmentation\n",
+    "                RandAdjustContrastd(\n",
+    "                    keys=[\"image\"],\n",
+    "                    prob=0.25,\n",
+    "                ), \n",
+    "                RandHistogramShiftd(\n",
+    "                    keys=[\"image\"],\n",
+    "                    prob=0.25,\n",
+    "                ),\n",
+    "                RandGaussianNoised(\n",
+    "                    keys=[\"image\"],\n",
+    "                    prob=0.25,\n",
+    "                ),\n",
+    "                RandGaussianSmoothd(\n",
+    "                    keys=[\"image\"],\n",
+    "                    prob=0.25,\n",
+    "                ),\n",
+    "                RandGaussianSharpend(\n",
+    "                    keys=[\"image\"],\n",
+    "                    prob=0.25,\n",
+    "                ),\n",
+    "                RandAffined(\n",
+    "                    keys=['image', 'label'],\n",
+    "                    mode=[\"bilinear\", \"nearest\"],\n",
+    "                    prob=0.5,\n",
+    "                    spatial_size=(160, 160),\n",
+    "                    rotate_range=(0, np.pi/4),\n",
+    "                    scale_range=(0.3, 0.3)\n",
+    "                ),\n",
+    "                RandRotate90d(\n",
+    "                    keys=[\"image\", \"label\"],\n",
+    "                    prob=0.25,\n",
+    "                ),\n",
+    "                RandFlipd(\n",
+    "                    keys=[\"image\", \"label\"],\n",
+    "                    prob=0.25,\n",
+    "                ),\n",
+    "                RandSpatialCropd(\n",
+    "                    keys=[\"image\", \"label\"],\n",
+    "                    # prob=0.25,\n",
+    "                    roi_size=(128, 128),\n",
+    "                    random_size=False, \n",
+    "                    random_center=True,\n",
+    "                )\n",
+    "                # RandCropByPosNegLabeld(\n",
+    "                #     keys=[\"image\", \"label\"],\n",
+    "                #     label_key=\"label\",\n",
+    "                #     # pos_value=1.0,\n",
+    "                #     # neg_value=0.0,\n",
+    "                #     spatial_size=(128, 128),                    \n",
+    "                # ), \n",
+    "                # ToTensord(keys=[\"image\", \"label\"]),\n",
+    "            ]\n",
+    "        )\n",
     "        return self._shared_dataloader(self.train_data_dicts, \n",
     "            transforms=train_transforms, \n",
     "            shuffle=True,\n",
@@ -425,7 +533,25 @@
     "        )\n",
     "    \n",
     "    def val_dataloader(self):\n",
-    "        val_transforms = None\n",
+    "        val_transforms = Compose(\n",
+    "            [\n",
+    "                LoadImaged(keys=[\"image\", \"label\"]),\n",
+    "                AddChanneld(keys=[\"image\", \"label\"]),\n",
+    "                Rotate90d(keys=[\"image\", \"label\"]),\n",
+    "                Flipd(keys=[\"image\", \"label\"], spatial_axis=0),\n",
+    "                Resized(\n",
+    "                    keys=[\"image\", \"label\"], \n",
+    "                    spatial_size=(128, 128),\n",
+    "                    mode=[\"bilinear\", \"nearest\"],\n",
+    "                ),\n",
+    "                ScaleIntensityd(\n",
+    "                    keys=[\"image\", \"label\"], \n",
+    "                    minv=0.0, \n",
+    "                    maxv=1.0,\n",
+    "                ),\n",
+    "                # ToTensord(keys=[\"image\", \"label\"]),\n",
+    "            ]\n",
+    "        )\n",
     "        return self._shared_dataloader(self.val_data_dicts, \n",
     "            transforms=val_transforms, \n",
     "            shuffle=False,\n",
@@ -434,7 +560,25 @@
     "        )\n",
     "\n",
     "    def test_dataloader(self):\n",
-    "        test_transforms = None\n",
+    "        test_transforms = Compose(\n",
+    "            [\n",
+    "                LoadImaged(keys=[\"image\", \"label\"]),\n",
+    "                AddChanneld(keys=[\"image\", \"label\"]),\n",
+    "                Rotate90d(keys=[\"image\", \"label\"]),\n",
+    "                Flipd(keys=[\"image\", \"label\"], spatial_axis=0),\n",
+    "                Resized(\n",
+    "                    keys=[\"image\", \"label\"], \n",
+    "                    spatial_size=(128, 128),\n",
+    "                    mode=[\"bilinear\", \"nearest\"],\n",
+    "                ),\n",
+    "                ScaleIntensityd(\n",
+    "                    keys=[\"image\", \"label\"], \n",
+    "                    minv=0.0, \n",
+    "                    maxv=1.0,\n",
+    "                ),\n",
+    "                # ToTensord(keys=[\"image\", \"label\"]),\n",
+    "            ]\n",
+    "        )\n",
     "        return self._shared_dataloader(self.test_data_dicts, \n",
     "            transforms=test_transforms, \n",
     "            shuffle=False,\n",
