Stochastic random grid with diagonalization

--- a/GNN.ipynb
+++ b/GNN.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2139205/2944165975.py:24: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+      "/tmp/ipykernel_2180324/2944165975.py:24: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
       "  set_matplotlib_formats('svg', 'pdf') # For export\n",
       "Global seed set to 42\n"
      ]
@@ -149,44 +149,6 @@
       "Found 20 images and 20 labels.\n",
       "Found 20 images and 20 labels.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  | Name          | Type     | Params\n",
-      "-------------------------------------------\n",
-      "0 | model         | GNNModel | 63.7 K\n",
-      "1 | loss_function | DiceLoss | 0     \n",
-      "-------------------------------------------\n",
-      "63.7 K    Trainable params\n",
-      "0         Non-trainable params\n",
-      "63.7 K    Total params\n",
-      "0.255     Total estimated model params size (MB)\n",
-      "Checkpoint directory /home/qtran/graph/logs exists and is not empty.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                                      "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 42\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3:  36%|███▌      | 215/604 [06:19<11:26,  1.77s/it, loss=0.868, v_num=9, val_loss=0.915]"
-     ]
     }
    ],
    "source": [
@@ -311,36 +273,26 @@
     "                for y in range(self.height-k)\n",
     "            ], weight=0.5)\n",
     "\n",
-    "            # # diagonal edges\n",
-    "            # self.graph.add_edges_from([\n",
-    "            #     ((x+0, y+0), (x+k, y+k))\n",
-    "            #     for x in range(self.width-k)\n",
-    "            #     for y in range(self.height-k)\n",
-    "            # ] + [\n",
-    "            #     ((x+k, y+0), (x+0, y+k))\n",
-    "            #     for x in range(self.width-k)\n",
-    "            #     for y in range(self.height-k)\n",
-    "            # ], weight=0.5)\n",
+    "            # diagonal edges\n",
+    "            self.graph.add_edges_from([\n",
+    "                ((x+0, y+0), (x+k, y+k))\n",
+    "                for x in range(self.width-k)\n",
+    "                for y in range(self.height-k)\n",
+    "            ] + [\n",
+    "                ((x+k, y+0), (x+0, y+k))\n",
+    "                for x in range(self.width-k)\n",
+    "                for y in range(self.height-k)\n",
+    "            ], weight=0.5)\n",
     "            \n",
     "            np.random.seed(self.seed)\n",
-    "            k = np.random.choice([2, 4, 8, 16])\n",
+    "            # k = np.random.choice([2, 4, 8, 16])\n",
     "            # straight edges\n",
+    "            x = np.random.choice(self.width, size=(self.height*self.width//2), replace=True)\n",
+    "            y = np.random.choice(self.height,  size=(self.height*self.width//2), replace=True)\n",
+    "            u = np.random.choice(self.width, size=(self.height*self.width//2), replace=True)\n",
+    "            v = np.random.choice(self.height,  size=(self.height*self.width//2), replace=True)\n",
     "            self.graph.add_edges_from([\n",
-    "                ((x+0, y+0), (x+0, y+k))\n",
-    "                for x in range(self.width-k)\n",
-    "                for y in range(self.height-k)\n",
-    "            ] + [\n",
-    "                ((x+0, y+0), (x+k, y+0))\n",
-    "                for x in range(self.width-k)\n",
-    "                for y in range(self.height-k)\n",
-    "            ] + [\n",
-    "                ((x+k, y+0), (x+k, y+k))\n",
-    "                for x in range(self.width-k)\n",
-    "                for y in range(self.height-k)\n",
-    "            ] + [\n",
-    "                ((x+0, y+k), (x+k, y+k))\n",
-    "                for x in range(self.width-k)\n",
-    "                for y in range(self.height-k)\n",
+    "                ((x, y), (u, v)) for x, y, u, v in zip(x, y, u, v)\n",
     "            ], weight=0.5)\n",
     "\n",
     "            # # diagonal edges\n",
