Stochastic random grid with diagonalization, back to correct affinity

--- a/GNN.ipynb
+++ b/GNN.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2180324/2944165975.py:24: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+      "/tmp/ipykernel_2488930/2944165975.py:24: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
       "  set_matplotlib_formats('svg', 'pdf') # For export\n",
       "Global seed set to 42\n"
      ]
@@ -149,6 +149,44 @@
       "Found 20 images and 20 labels.\n",
       "Found 20 images and 20 labels.\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  | Name          | Type     | Params\n",
+      "-------------------------------------------\n",
+      "0 | model         | GNNModel | 103 K \n",
+      "1 | loss_function | DiceLoss | 0     \n",
+      "-------------------------------------------\n",
+      "103 K     Trainable params\n",
+      "0         Non-trainable params\n",
+      "103 K     Total params\n",
+      "0.412     Total estimated model params size (MB)\n",
+      "Checkpoint directory /home/qtran/graph/logs exists and is not empty.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                                      "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 42\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 17:  98%|█████████▊| 592/604 [18:21<00:22,  1.86s/it, loss=0.553, v_num=1, val_loss=0.540]"
+     ]
     }
    ],
    "source": [
@@ -287,10 +325,10 @@
     "            np.random.seed(self.seed)\n",
     "            # k = np.random.choice([2, 4, 8, 16])\n",
     "            # straight edges\n",
-    "            x = np.random.choice(self.width, size=(self.height*self.width//2), replace=True)\n",
-    "            y = np.random.choice(self.height,  size=(self.height*self.width//2), replace=True)\n",
-    "            u = np.random.choice(self.width, size=(self.height*self.width//2), replace=True)\n",
-    "            v = np.random.choice(self.height,  size=(self.height*self.width//2), replace=True)\n",
+    "            x = np.random.choice(self.width, size=(self.height*self.width//4), replace=True)\n",
+    "            y = np.random.choice(self.height,  size=(self.height*self.width//4), replace=True)\n",
+    "            u = np.random.choice(self.width, size=(self.height*self.width//4), replace=True)\n",
+    "            v = np.random.choice(self.height,  size=(self.height*self.width//4), replace=True)\n",
     "            self.graph.add_edges_from([\n",
     "                ((x, y), (u, v)) for x, y, u, v in zip(x, y, u, v)\n",
     "            ], weight=0.5)\n",
@@ -311,11 +349,11 @@
     "            pass\n",
     "\n",
     "        # Add edge to master node \n",
-    "        # self.graph.add_edges_from([\n",
-    "        #     ((x, y), (-1, -1))\n",
-    "        #     for x in range(self.width)\n",
-    "        #     for y in range(self.height)\n",
-    "        # ], weight=0.5)\n",
+    "        self.graph.add_edges_from([\n",
+    "            ((x, y), (-1, -1))\n",
+    "            for x in range(self.width)\n",
+    "            for y in range(self.height)\n",
+    "        ], weight=0.5)\n",
     "\n",
     "        if diff_edge==\"mean\":\n",
     "            for e, edge in enumerate(self.graph.edges):\n",
@@ -324,10 +362,11 @@
     "        elif diff_edge==\"diff\":\n",
     "            for e, edge in enumerate(self.graph.edges):\n",
     "                # Compute the affinity, 1 - difference\n",
-    "                if self.array[edge[0]] == self.array[edge[1]] == 0: # We dont care the connection of background\n",
-    "                    self.graph.edges[edge]['weight'] = np.abs(self.array[edge[0]] - self.array[edge[1]]) # 0\n",
-    "                else:\n",
-    "                    self.graph.edges[edge]['weight'] = ( 1 - np.abs(self.array[edge[0]] - self.array[edge[1]]) )\n",
+    "                self.graph.edges[edge]['weight'] = ( 1 - np.abs(self.array[edge[0]] - self.array[edge[1]]) )\n",
+    "                # if self.array[edge[0]] == self.array[edge[1]] == 0: # We dont care the connection of background\n",
+    "                #     self.graph.edges[edge]['weight'] = np.abs(self.array[edge[0]] - self.array[edge[1]]) # 0\n",
+    "                # else:\n",
+    "                #     self.graph.edges[edge]['weight'] = ( 1 - np.abs(self.array[edge[0]] - self.array[edge[1]]) )\n",
     "\n",
     "    def set_nodes(self, weight=None):\n",
     "        for n, node in enumerate(self.graph.nodes):\n",
@@ -336,8 +375,8 @@
     "            self.graph.nodes[node]['weight'] = self.array[y,x,:] \\\n",
     "                if weight is None else np.array([weight], dtype=np.float32)\n",
     "        # Set master node \n",
-    "        # self.graph.add_node((-1, -1), weight=np.array([1.0], dtype=np.float32) if weight is None else np.array([weight], dtype=np.float32)) \n",
-    "        # self.graph.add_node((-2, -2), weight=np.array([0.0], dtype=np.float32) if weight is None else np.array([weight], dtype=np.float32)) \n",
+    "        self.graph.add_node((-1, -1), weight=np.array([1.0], dtype=np.float32) if weight is None else np.array([weight], dtype=np.float32)) \n",
+    "        self.graph.add_node((-2, -2), weight=np.array([0.0], dtype=np.float32) if weight is None else np.array([weight], dtype=np.float32)) \n",
     "\n",
     "\n",
     "class GraphBasedDataset(Dataset):\n",
@@ -596,7 +635,7 @@
     "datamodule.prepare_data()\n",
     "datamodule.setup()\n",
     "\n",
-    "model = GridGNN(c_in=1, c_hidden=100, c_out=1, num_layers=8, edge_dim=1, add_self_loops=False, dp_rate=0.2)\n",
+    "model = GridGNN(c_in=1, c_hidden=128, c_out=1, num_layers=8, edge_dim=1, add_self_loops=False, dp_rate=0.2)\n",
     "\n",
     "checkpoint_callback = ModelCheckpoint(\n",
     "    monitor='val_loss',\n",
