Update edge attributes at each layers

--- a/GNN.ipynb
+++ b/GNN.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2488930/2944165975.py:24: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+      "/tmp/ipykernel_3315340/2944165975.py:24: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
       "  set_matplotlib_formats('svg', 'pdf') # For export\n",
       "Global seed set to 42\n"
      ]
@@ -157,13 +157,13 @@
       "\n",
       "  | Name          | Type     | Params\n",
       "-------------------------------------------\n",
-      "0 | model         | GNNModel | 103 K \n",
+      "0 | model         | GNNModel | 63.7 K\n",
       "1 | loss_function | DiceLoss | 0     \n",
       "-------------------------------------------\n",
-      "103 K     Trainable params\n",
+      "63.7 K    Trainable params\n",
       "0         Non-trainable params\n",
-      "103 K     Total params\n",
-      "0.412     Total estimated model params size (MB)\n",
+      "63.7 K    Total params\n",
+      "0.255     Total estimated model params size (MB)\n",
       "Checkpoint directory /home/qtran/graph/logs exists and is not empty.\n"
      ]
     },
@@ -185,7 +185,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 17:  98%|█████████▊| 592/604 [18:21<00:22,  1.86s/it, loss=0.553, v_num=1, val_loss=0.540]"
+      "Epoch 1:  24%|██▍       | 147/604 [04:36<14:18,  1.88s/it, loss=0.582, v_num=2, val_loss=0.640]"
      ]
     }
    ],
@@ -350,10 +350,17 @@
     "\n",
     "        # Add edge to master node \n",
     "        self.graph.add_edges_from([\n",
-    "            ((x, y), (-1, -1))\n",
+    "            ((x, y), (-1, 0))\n",
     "            for x in range(self.width)\n",
     "            for y in range(self.height)\n",
     "        ], weight=0.5)\n",
+    "\n",
+    "        self.graph.add_edges_from([\n",
+    "            ((x, y), (0, -1))\n",
+    "            for x in range(self.width)\n",
+    "            for y in range(self.height)\n",
+    "        ], weight=0.5)\n",
+    "\n",
     "\n",
     "        if diff_edge==\"mean\":\n",
     "            for e, edge in enumerate(self.graph.edges):\n",
@@ -375,8 +382,8 @@
     "            self.graph.nodes[node]['weight'] = self.array[y,x,:] \\\n",
     "                if weight is None else np.array([weight], dtype=np.float32)\n",
     "        # Set master node \n",
-    "        self.graph.add_node((-1, -1), weight=np.array([1.0], dtype=np.float32) if weight is None else np.array([weight], dtype=np.float32)) \n",
-    "        self.graph.add_node((-2, -2), weight=np.array([0.0], dtype=np.float32) if weight is None else np.array([weight], dtype=np.float32)) \n",
+    "        self.graph.add_node((-1, 0), weight=np.array([1.0], dtype=np.float32) if weight is None else np.array([weight], dtype=np.float32)) \n",
+    "        self.graph.add_node((0, -1), weight=np.array([0.0], dtype=np.float32) if weight is None else np.array([weight], dtype=np.float32)) \n",
     "\n",
     "\n",
     "class GraphBasedDataset(Dataset):\n",
@@ -410,7 +417,7 @@
     "        # else:\n",
     "        #     image, label = data_dict[\"image\"], data_dict[\"label\"]\n",
     "        seed = index\n",
-    "        image_grid = ImageGrid(image, diff_edge=\"diff\", seed=seed)\n",
+    "        image_grid = ImageGrid(image, diff_edge=\"0.5\", seed=seed)\n",
     "        label_grid = ImageGrid(label, diff_edge=\"diff\", seed=seed)\n",
     "\n",
     "        image_graph = torch_geometric.utils.from_networkx(image_grid.graph, \n",
@@ -419,6 +426,10 @@
     "        label_graph = torch_geometric.utils.from_networkx(label_grid.graph, \n",
     "                                                          group_node_attrs=['weight'],\n",
     "                                                          group_edge_attrs=['weight'])\n",
+    "        # Normalize coordinate\n",
+    "        # image_graph.x = geom_transforms.NormalizeScale()(image_graph.x)\n",
+    "        # label_graph.x = geom_transforms.NormalizeScale()(label_graph.x)\n",
+    "        \n",
     "        # if self.transforms:\n",
     "        #     pass\n",
     "        # print(image_graph.x.shape, image_graph.edge_index.shape, image_graph.edge_attr.shape)\n",
@@ -555,10 +566,10 @@
     "            # All PyTorch Geometric graph layer inherit the class \"MessagePassing\", hence\n",
     "            # we can simply check the class type.\n",
     "            if isinstance(node_layer, geom_nn.MessagePassing):\n",
-    "                x, (edge_index, alpha) = node_layer(x, edge_index, edge_attr, return_attention_weights=True)\n",
+    "                x, (edge_index, edge_attr) = node_layer(x, edge_index, edge_attr, return_attention_weights=True)\n",
     "            else:\n",
     "                x = node_layer(x)\n",
-    "        return x, alpha\n",
+    "        return x, edge_attr\n",
     "\n",
     "class GridGNN(pl.LightningModule):\n",
     "    def __init__(self, **model_kwargs):\n",
@@ -572,8 +583,8 @@
     "                                      squared_pred=False)\n",
     "\n",
     "    def forward(self, data, mode=\"train\"):\n",
-    "        output, alpha = self.model(data.x, data.edge_index, data.edge_attr)\n",
-    "        return torch.sigmoid(output), torch.sigmoid(alpha)\n",
+    "        output, edge_attr = self.model(data.x, data.edge_index, data.edge_attr)\n",
+    "        return torch.sigmoid(output), torch.sigmoid(edge_attr)\n",
     "\n",
     "    def configure_optimizers(self):\n",
     "        optimizer = torch.optim.AdamW(self.parameters(), lr=0.0001)\n",
@@ -581,18 +592,30 @@
     "\n",
     "    def _shared_step(self, batch, batch_idx, stage: Optional[str]='_shared'):\n",
     "        images, labels = batch[\"image\"], batch[\"label\"]\n",
-    "        nodes, edges = self.forward(images)\n",
-    "        loss = 0.5*(self.loss_function(nodes, labels.x) + self.loss_function(edges, labels.edge_attr))\n",
+    "        output, attrs = self.forward(images)\n",
+    "        # x = ...  # Node feature matrix: [num_nodes, num_features]\n",
+    "        # edge_index = ... # Edge indices: [2, num_edges]\n",
+    "        # src, dst = images.edge_index\n",
+    "        # estim_edge_attr = torch.sigmoid((output[src] * output[dst]).sum(dim=-1, keepdim=True))\n",
+    "        # estim_edge_attr *= attns\n",
+    "        loss = 0.5*(self.loss_function(output, labels.x) \\\n",
+    "                  + self.loss_function(attrs, labels.edge_attr))\n",
     "        return {\"loss\": loss}\n",
     "\n",
     "    def training_step(self, batch, batch_idx, stage: Optional[str]='train'):\n",
     "        images, labels = batch[\"image\"], batch[\"label\"]\n",
-    "        nodes, edges = self.forward(images)\n",
-    "        loss = 0.5*(self.loss_function(nodes, labels.x) + self.loss_function(edges, labels.edge_attr))\n",
+    "        output, attrs = self.forward(images)\n",
+    "        # x = ...  # Node feature matrix: [num_nodes, num_features]\n",
+    "        # edge_index = ... # Edge indices: [2, num_edges]\n",
+    "        # src, dst = images.edge_index\n",
+    "        # estim_edge_attr = torch.sigmoid((output[src] * output[dst]).sum(dim=-1, keepdim=True))\n",
+    "        # estim_edge_attr *= attns\n",
+    "        loss = 0.5*(self.loss_function(output, labels.x) \\\n",
+    "                  + self.loss_function(attrs, labels.edge_attr))\n",
     "        if batch_idx==0:\n",
     "            viz = torch.cat([images.x[:16384].reshape([128, 128]), \n",
     "                             labels.x[:16384].reshape([128, 128]), \n",
-    "                             nodes[:16384].reshape([128, 128]), \n",
+    "                             output[:16384].reshape([128, 128]), \n",
     "                            ], dim=-1)#[:8]\n",
     "            grid = torchvision.utils.make_grid(viz, nrow=5, padding=0)\n",
     "            tensorboard = self.logger[0].experiment\n",
@@ -635,7 +658,7 @@
     "datamodule.prepare_data()\n",
     "datamodule.setup()\n",
     "\n",
-    "model = GridGNN(c_in=1, c_hidden=128, c_out=1, num_layers=8, edge_dim=1, add_self_loops=False, dp_rate=0.2)\n",
+    "model = GridGNN(c_in=1, c_hidden=100, c_out=1, num_layers=8, edge_dim=1, add_self_loops=False, dp_rate=0.2)\n",
     "\n",
     "checkpoint_callback = ModelCheckpoint(\n",
     "    monitor='val_loss',\n",
