--- a/GNN.ipynb
+++ b/GNN.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3315340/2944165975.py:24: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+      "/tmp/ipykernel_3360630/2944165975.py:24: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
       "  set_matplotlib_formats('svg', 'pdf') # For export\n",
       "Global seed set to 42\n"
      ]
@@ -185,7 +185,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1:  24%|██▍       | 147/604 [04:36<14:18,  1.88s/it, loss=0.582, v_num=2, val_loss=0.640]"
+      "Epoch 2:  26%|██▋       | 159/604 [06:04<17:00,  2.29s/it, loss=0.568, v_num=1, val_loss=0.598]"
      ]
     }
    ],
@@ -417,7 +417,7 @@
     "        # else:\n",
     "        #     image, label = data_dict[\"image\"], data_dict[\"label\"]\n",
     "        seed = index\n",
-    "        image_grid = ImageGrid(image, diff_edge=\"0.5\", seed=seed)\n",
+    "        image_grid = ImageGrid(image, diff_edge=\"diff\", seed=seed)\n",
     "        label_grid = ImageGrid(label, diff_edge=\"diff\", seed=seed)\n",
     "\n",
     "        image_graph = torch_geometric.utils.from_networkx(image_grid.graph, \n",
@@ -521,7 +521,7 @@
     "        )\n",
     "\n",
     "class GNNModel(nn.Module):\n",
-    "    def __init__(self, c_in, c_hidden, c_out, num_layers=3, dp_rate=0.2, **kwargs):\n",
+    "    def __init__(self, c_in, c_hidden, c_out, num_layers=3, dp_rate=0.5, **kwargs):\n",
     "        \"\"\"\n",
     "        Inputs:\n",
     "            c_in - Dimension of input features\n",
@@ -543,15 +543,15 @@
     "            node_model += [\n",
     "                node_layer(in_channels=in_channels,\n",
     "                          out_channels=out_channels,\n",
-    "                          dropout=dp_rate,\n",
+    "                          #dropout=dp_rate,\n",
     "                          **kwargs),\n",
     "                nn.ReLU(inplace=True),\n",
-    "                # nn.Dropout(dp_rate)\n",
+    "                nn.Dropout(dp_rate)\n",
     "            ]\n",
     "            in_channels = c_hidden\n",
     "        node_model += [node_layer(in_channels=in_channels,\n",
     "                             out_channels=c_out,\n",
-    "                             dropout=dp_rate,\n",
+    "                             #dropout=dp_rate,\n",
     "                             **kwargs)]\n",
     "        self.node_model = nn.ModuleList(node_model)\n",
     "\n",
@@ -593,11 +593,6 @@
     "    def _shared_step(self, batch, batch_idx, stage: Optional[str]='_shared'):\n",
     "        images, labels = batch[\"image\"], batch[\"label\"]\n",
     "        output, attrs = self.forward(images)\n",
-    "        # x = ...  # Node feature matrix: [num_nodes, num_features]\n",
-    "        # edge_index = ... # Edge indices: [2, num_edges]\n",
-    "        # src, dst = images.edge_index\n",
-    "        # estim_edge_attr = torch.sigmoid((output[src] * output[dst]).sum(dim=-1, keepdim=True))\n",
-    "        # estim_edge_attr *= attns\n",
     "        loss = 0.5*(self.loss_function(output, labels.x) \\\n",
     "                  + self.loss_function(attrs, labels.edge_attr))\n",
     "        return {\"loss\": loss}\n",
@@ -605,11 +600,6 @@
     "    def training_step(self, batch, batch_idx, stage: Optional[str]='train'):\n",
     "        images, labels = batch[\"image\"], batch[\"label\"]\n",
     "        output, attrs = self.forward(images)\n",
-    "        # x = ...  # Node feature matrix: [num_nodes, num_features]\n",
-    "        # edge_index = ... # Edge indices: [2, num_edges]\n",
-    "        # src, dst = images.edge_index\n",
-    "        # estim_edge_attr = torch.sigmoid((output[src] * output[dst]).sum(dim=-1, keepdim=True))\n",
-    "        # estim_edge_attr *= attns\n",
     "        loss = 0.5*(self.loss_function(output, labels.x) \\\n",
     "                  + self.loss_function(attrs, labels.edge_attr))\n",
     "        if batch_idx==0:\n",
@@ -658,7 +648,7 @@
     "datamodule.prepare_data()\n",
     "datamodule.setup()\n",
     "\n",
-    "model = GridGNN(c_in=1, c_hidden=100, c_out=1, num_layers=8, edge_dim=1, add_self_loops=False, dp_rate=0.2)\n",
+    "model = GridGNN(c_in=1, c_hidden=100, c_out=1, num_layers=8, edge_dim=1, add_self_loops=False, dp_rate=0.5)\n",
     "\n",
     "checkpoint_callback = ModelCheckpoint(\n",
     "    monitor='val_loss',\n",
