Update ImageGrid as nx

--- a/GNN.ipynb
+++ b/GNN.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3360630/2944165975.py:24: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+      "/tmp/ipykernel_3400722/2944165975.py:24: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
       "  set_matplotlib_formats('svg', 'pdf') # For export\n",
       "Global seed set to 42\n"
      ]
@@ -185,7 +185,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 2:  26%|██▋       | 159/604 [06:04<17:00,  2.29s/it, loss=0.568, v_num=1, val_loss=0.598]"
+      "Epoch 200: 100%|██████████| 604/604 [21:24<00:00,  2.13s/it, loss=0.518, v_num=0, val_loss=0.492]\n"
      ]
     }
    ],
@@ -567,6 +567,7 @@
     "            # we can simply check the class type.\n",
     "            if isinstance(node_layer, geom_nn.MessagePassing):\n",
     "                x, (edge_index, edge_attr) = node_layer(x, edge_index, edge_attr, return_attention_weights=True)\n",
+    "                # edge_attr = alpha*( (1 - torch.abs(x[edge_index[0]] - x[edge_index[1]])) )\n",
     "            else:\n",
     "                x = node_layer(x)\n",
     "        return x, edge_attr\n",
